add github actions config

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26, py27, py34, py35
+envlist = py27, py36, py37, py38, py39, py310
 
 [testenv]
 deps =
@@ -11,3 +11,12 @@ deps =
 commands = py.test --cov=version_utils
 setenv =
     LOG_LEVEL = DEBUG
+
+[gh-actions]
+python =
+    2.7: py27
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
